fixed tse feedback on row alignment

--- a/styles.css
+++ b/styles.css
@@ -297,7 +297,6 @@ a:hover {
 .row-text {
   color: black;
   grid-column: 2/4;
-  padding: 0.5em;
   grid-area: row-text;
 }
 
@@ -1092,6 +1091,18 @@ a:hover {
     color: black;
   }
 
+  .row-text a {
+    display: block;
+  }
+
+
+  .row2-box,
+  .row-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
   .row-3 {
     display: grid;
     grid-row: 3/4;
@@ -1229,18 +1240,39 @@ a:hover {
 
 /* PC LAYOUT (portrait and landscape) */
 @media screen and (min-width: 1025px) {
+
+
+
+  .wrapper {
+    display: grid;
+    padding: 8px;
+    grid-template-rows: 50px 600px 98% 1%;
+    row-gap: 15px;
+    font-family: 'Roboto', sans-serif;
+    grid-template-areas:
+        "main-header"
+        "row-1"
+        "row-section"
+        "main-footer";
+
+  }
   .main-header {
     display: grid;
     grid-row: 1/-1;
     grid-template-columns: 1fr;
     grid-template-rows: 90px;
     width: 100%;
+    padding: 8px;
     background-color: #eee;
     grid-area: main-header;
     position: fixed;
     grid-template-areas:
       "header-row-1"
       "header-row-2";
+  }
+
+  .row-1{
+    grid-area: row-1;
   }
 
   .header-row-1 {
@@ -1358,10 +1390,12 @@ a:hover {
     display: grid;
     grid-row: 2/3;
     gap: 15px;
-    grid-template-rows: 500px 600px 420px 1600px 570px;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    grid-template-rows: 600px 400px 1700px 570px;
     grid-area: row-section;
     grid-template-areas:
-      "row-1"
       "row-2"
       "row-3"
       "row-4"
@@ -1398,9 +1432,7 @@ a:hover {
   }
 
   .row-2 {
-    margin-left: 15px;
     display: grid;
-    grid-row: 2/3;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 50px 1fr 1fr;
     grid-area: row-2;
@@ -1420,11 +1452,12 @@ a:hover {
   .row2-section-9 {
     display: flex;
     flex-direction: column;
+    text-align: left;
   }
 
   .row-image {
-    width: 17em;
-    height: 9em;
+    width: 270px;
+    height: 201px;
   }
 
   .row2-section-1 {
@@ -1463,7 +1496,7 @@ a:hover {
     display: grid;
     grid-row: 4/5;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(3, 770px);
+    grid-template-rows: 1fr 1fr;
     gap: 15px;
     grid-area: row-4;
     grid-template-areas:
@@ -1474,7 +1507,6 @@ a:hover {
 
   .row-5 {
     display: grid;
-    grid-row: 5/6;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 50px repeat(3, 350px);
     gap: 15px;
@@ -1488,8 +1520,7 @@ a:hover {
   .row5-section-1 {
     display: flex;
     align-items: center;
-    grid-column: 1/2;
-    grid-row: 1/2;
+    justify-content: space-between;
     grid-area: row5-section-1;
   }
 
@@ -1506,9 +1537,8 @@ a:hover {
   }
 
   .row5-image {
-    width: 90%;
-    margin-left: 15px;
-    height: auto;
+    width: 270px;
+    height: 201px;
   }
 
   .row5-section-1-a {
